// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs default 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <Stepper
        currentStep={0}
        steps={
          Array [
            Object {
              "title": "Step 1",
            },
            Object {
              "title": "Step 2",
            },
            Object {
              "title": "Step 3",
            },
            Object {
              "title": "Step 4",
            },
            Object {
              "title": "Step 5",
            },
          ]
        }
      >
        <div
          className="HoiPoi__Stepper__root-1-0"
        >
          <Steps
            current={0}
            direction="horizontal"
            iconPrefix="rc"
            initial={0}
            labelPlacement="horizontal"
            prefixCls="rc-steps"
            progressDot={false}
            size=""
            status="process"
            type="default"
          >
            <div
              className="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
              style={Object {}}
            >
              <Step
                active={true}
                className="HoiPoi__Stepper__active-1-2"
                icon={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      1
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$0"
                prefixCls="rc-steps"
                progressDot={false}
                status="process"
                stepIndex={0}
                stepNumber="1"
                title={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="bold"
                    >
                      Step 1
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-process HoiPoi__Stepper__active-1-2 rc-steps-item-custom rc-steps-item-active"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Stepper__icon-1-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              1
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="bold"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4"
                              style={Object {}}
                            >
                              Step 1
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      2
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$1"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={1}
                stepNumber="2"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      Step 2
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Stepper__icon-1-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              2
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              Step 2
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      3
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$2"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={2}
                stepNumber="3"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      Step 3
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Stepper__icon-1-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              3
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              Step 3
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      4
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$3"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={3}
                stepNumber="4"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      Step 4
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Stepper__icon-1-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              4
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              Step 4
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      5
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$4"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={4}
                stepNumber="5"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      Step 5
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Stepper__icon-1-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              5
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              Step 5
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
            </div>
          </Steps>
        </div>
      </Stepper>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Tabs with completed 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <Stepper
        currentStep={3}
        steps={
          Array [
            Object {
              "isCompleted": true,
              "title": "Step 1",
            },
            Object {
              "isCompleted": true,
              "title": "Step 2",
            },
            Object {
              "title": "Step 3",
            },
            Object {
              "title": "Step 4",
            },
            Object {
              "title": "Step 5",
            },
          ]
        }
      >
        <div
          className="HoiPoi__Stepper__root-2-0"
        >
          <Steps
            current={3}
            direction="horizontal"
            iconPrefix="rc"
            initial={0}
            labelPlacement="horizontal"
            prefixCls="rc-steps"
            progressDot={false}
            size=""
            status="process"
            type="default"
          >
            <div
              className="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
              style={Object {}}
            >
              <Step
                active={false}
                className="HoiPoi__Stepper__completed-2-3"
                icon={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      <Icon
                        color="white"
                        name="tick"
                        overrides={Object {}}
                        size="small"
                      />
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$0"
                prefixCls="rc-steps"
                progressDot={false}
                status="finish"
                stepIndex={0}
                stepNumber="1"
                title={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="bold"
                    >
                      Step 1
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-finish HoiPoi__Stepper__completed-2-3 rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Stepper__icon-2-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              <Icon
                                color="white"
                                name="tick"
                                overrides={Object {}}
                                size="small"
                              >
                                <span
                                  className="HoiPoi__Icon__root-2-8 HoiPoi__Icon__small-2-9"
                                  onMouseDown={[Function]}
                                  onMouseOut={[Function]}
                                  onMouseOver={[Function]}
                                  onMouseUp={[Function]}
                                >
                                  <Tick
                                    color="white"
                                  >
                                    <svg
                                      viewBox="0 0 10 10"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M3.475 6.61l-2.32-2.415L0 5.397 3.464 9 10 2.201 8.845 1l-5.37 5.61z"
                                        fill="white"
                                        fillRule="evenodd"
                                      />
                                    </svg>
                                  </Tick>
                                </span>
                              </Icon>
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="bold"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4"
                              style={Object {}}
                            >
                              Step 1
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className="HoiPoi__Stepper__completed-2-3"
                icon={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      <Icon
                        color="white"
                        name="tick"
                        overrides={Object {}}
                        size="small"
                      />
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$1"
                prefixCls="rc-steps"
                progressDot={false}
                status="finish"
                stepIndex={1}
                stepNumber="2"
                title={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="bold"
                    >
                      Step 2
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-finish HoiPoi__Stepper__completed-2-3 rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Stepper__icon-2-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              <Icon
                                color="white"
                                name="tick"
                                overrides={Object {}}
                                size="small"
                              >
                                <span
                                  className="HoiPoi__Icon__root-2-8 HoiPoi__Icon__small-2-9"
                                  onMouseDown={[Function]}
                                  onMouseOut={[Function]}
                                  onMouseOver={[Function]}
                                  onMouseUp={[Function]}
                                >
                                  <Tick
                                    color="white"
                                  >
                                    <svg
                                      viewBox="0 0 10 10"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M3.475 6.61l-2.32-2.415L0 5.397 3.464 9 10 2.201 8.845 1l-5.37 5.61z"
                                        fill="white"
                                        fillRule="evenodd"
                                      />
                                    </svg>
                                  </Tick>
                                </span>
                              </Icon>
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="bold"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4"
                              style={Object {}}
                            >
                              Step 2
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      3
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$2"
                prefixCls="rc-steps"
                progressDot={false}
                status="finish"
                stepIndex={2}
                stepNumber="3"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      Step 3
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-finish rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Stepper__icon-2-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              3
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              Step 3
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={true}
                className="HoiPoi__Stepper__active-2-2"
                icon={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      4
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$3"
                prefixCls="rc-steps"
                progressDot={false}
                status="process"
                stepIndex={3}
                stepNumber="4"
                title={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="bold"
                    >
                      Step 4
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-process HoiPoi__Stepper__active-2-2 rc-steps-item-custom rc-steps-item-active"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Stepper__icon-2-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              4
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="bold"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4"
                              style={Object {}}
                            >
                              Step 4
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      5
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$4"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={4}
                stepNumber="5"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      type="body"
                    >
                      Step 5
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Stepper__icon-2-1"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              5
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4"
                              style={
                                Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 14,
                                  "fontWeight": 400,
                                  "letterSpacing": 0.6,
                                  "lineHeight": "20px",
                                }
                              }
                            >
                              Step 5
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
            </div>
          </Steps>
        </div>
      </Stepper>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
